color changes added flex

--- a/starwars/style.css
+++ b/starwars/style.css
@@ -1,4 +1,8 @@
-#filmList {
+body {
+    background-color: black;
+}
+
+header #filmList {
     display: flex;
     flex-wrap: wrap;
 }
@@ -9,6 +13,7 @@ figure {
 
 figcaption {
     text-align: center;
+    display: block;
     background-color: black;
     color: white;
     margin: 0;
