--- a/characters/style.css
+++ b/characters/style.css
@@ -1,3 +1,17 @@
+* {
+    margin: .25em;
+    box-sizing: border-box;
+}
+
 body {
-    background-color: lightskybluez;
+    background-color: darkslateblue;
+}
+
+figure>img {
+    height: 250px;
+}
+
+#main {
+    display: flex;
+    flex-wrap: wrap;
 }
