new folders for new pages

--- a/characters/style.css
+++ b/characters/style.css
@@ -4,11 +4,17 @@
     }
     
     body {
-        background-color: darkslateblue;
+        background-color: black;
+        color: whitesmoke;
     }
     
     figure>img {
         height: 250px;
+    }
+    
+    figcaption {
+        text-align: center;
+        margin: 0;
     }
     
     #main {
