--- a/characters/style.css
+++ b/characters/style.css
@@ -6,6 +6,7 @@
     body {
         background-color: black;
         color: whitesmoke;
+        text-align: center;
     }
     
     figure>img {
