--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 :root {
     --bluegrey: #C1BFD9;
     --darkblue: #050330;
-    --darkpurple: #4722BD;
-    --purple: #8E24AF;
-    --pink: #F294EC;
 }
 
 * {
@@ -39,7 +36,7 @@ p {
 }
 
 .navlist a:hover {
-    background: #F294EC;
+    background: lightslategrey;
 }
 
 #navbar {
@@ -47,7 +44,7 @@ p {
     display: flex;
     justify-content: flex-end;
     position: fixed;
-    background-color: #8E24AF;
+    background-color: darkslategrey;
     color: white;
 }
 
@@ -67,7 +64,7 @@ p {
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #C1BFD9;
+    background-color: #050330;
     height: 100vh;
     width: 100%;
 }
@@ -87,7 +84,7 @@ img {
 figcaption {
     text-align: center;
     display: block;
-    background-color: #050330;
+    background-color: darkslategrey;
     color: white;
 }
 
@@ -100,7 +97,7 @@ a {
 }
 
 #contact {
-    background-color: var(--darkpurple);
+    background-color: var(--darkblue);
     color: white;
     display: flex;
     flex-direction: column;
@@ -143,7 +140,7 @@ footer {
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
-    background-color: #8E24AF;
+    background-color: darkslategrey;
     height: 70px;
     color: #fff;
 }
