updates to coding

--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ a {
     line-height: 3em;
 }
 
-@media (max-width 100px) {
+@media (max-width: 100px) {
     html {
         font-size: 100%;
     }
