--- a/congress/style.css
+++ b/congress/style.css
@@ -1,10 +1,29 @@
-* {
-    margin: 0;
-    box-sizing: border-box;
-}
-
-.congressGrid {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-}
+                                            * {
+                                                margin: 0;
+                                                box-sizing: border-box;
+                                            }
+                                            
+                                            body {
+                                                background-size: auto;
+                                                background-image: center;
+                                                background-repeat: round;
+                                            }
+                                            
+                                            .congressGrid {
+                                                display: flex;
+                                                flex-wrap: wrap;
+                                                justify-content: center;
+                                            }
+                                            
+                                            .figureDiv {
+                                                padding: 8px;
+                                                margin: 8px;
+                                                border: .5px red solid;
+                                                box-shadow: 3px 3px 3px black;
+                                            }
+                                            
+                                            figure {
+                                                width: 100px;
+                                                -webkit-font-smoothing: antialiased;
+                                                background-color: grey;
+                                            }
