--- a/style.css
+++ b/style.css
@@ -1,146 +1,174 @@
-:root {
-    --bluegrey: #C1BFD9;
-    --darkblue: #050330;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-
-body {
-    font-family: 'Roboto', sans-serif;
-}
-
-h1 {
-    font-family: 'Antic Slab';
-    font-size: 42px;
-}
-
-p {
-    text-align: center;
-}
-
-.navlist {
-    display: flex;
-    list-style: none;
-}
-
-.navlist a {
-    display: block;
-    font-size: 1.5em;
-    padding: .75em .5em;
-    color: white;
-}
-
-.navlist a:hover {
-    background: lightslategrey;
-}
-
-#navbar {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    position: fixed;
-    background-color: darkslategrey;
-    color: white;
-}
-
-#welcome-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #050330;
-    color: white;
-    width: 100%;
-    height: 100vh;
-}
-
-#projects {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: #050330;
-    height: 100vh;
-    width: 100%;
-}
-
-img {
-    display: block;
-}
-
-.project-tile {
-    margin: 1em;
-}
-
-.project-tile a:hover {
-    color: blue;
-}
-
-figcaption {
-    text-align: center;
-    display: block;
-    background-color: darkslategrey;
-    color: white;
-}
-
-figcaption>span {
-    font-size: 1.25em;
-}
-
-a {
-    text-decoration: none;
-}
-
-#contact {
-    background-color: var(--darkblue);
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 80vh;
-    line-height: 3em;
-}
-
-@media (max-width: 100px) {
-    html {
-        font-size: 100%;
-    }
-}
-
-@media (max-width: 980px) {
-    html {
-        font-size: 80%;
-    }
-}
-
-@media (max-width: 460px) {
-    html {
-        font-size: 60%;
-    }
-}
-
-.contact-links {
-    flex-wrap: wrap;
-}
-
-.contact-links a {
-    margin: 1em;
-    color: white;
-}
-
-footer {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    text-align: center;
-    background-color: darkslategrey;
-    height: 70px;
-    color: #fff;
-}
+                            :root {
+                               --bluegrey: #C1BFD9;
+                               --darkblue: #050330;
+                           }
+                           
+                           * {
+                               margin: 0;
+                               padding: 0;
+                               box-sizing: border-box;
+                               scroll-behavior: smooth;
+                           }
+                           
+                           body {
+                               font-family: 'Roboto', sans-serif;
+                           }
+                           
+                           h1 {
+                               font-family: 'Antic Slab';
+                               font-size: 42px;
+                           }
+                           
+                           p {
+                               text-align: center;
+                           }
+                           
+                           .navlist {
+                               display: flex;
+                               list-style: none;
+                           }
+                           
+                           .navlist a {
+                               display: block;
+                               font-size: 1.5em;
+                               padding: .75em .5em;
+                               color: white;
+                           }
+                           
+                           .navlist a:hover {
+                               background: lightslategrey;
+                           }
+                           
+                           #navbar {
+                               width: 100%;
+                               display: flex;
+                               justify-content: flex-end;
+                               position: fixed;
+                               background-color: darkslategrey;
+                               color: white;
+                           }
+                           
+                           #welcome-section {
+                               display: flex;
+                               flex-direction: column;
+                               justify-content: center;
+                               align-items: center;
+                               background-color: #050330;
+                               color: white;
+                               width: 100%;
+                               height: 100vh;
+                           }
+                           
+                           #projects {
+                               display: flex;
+                               flex-wrap: wrap;
+                               justify-content: space-evenly;
+                               align-items: center;
+                               background-color: #050330;
+                               height: 100%;
+                               width: 100%;
+                           }
+                           
+                           .container {
+                               position: relative;
+                               width: 50%;
+                           }
+                           
+                           .overlay {
+                               position: absolute;
+                               top: 0;
+                               bottom: 0;
+                               left: 0;
+                               right: 0;
+                               height: 100%;
+                               width: 100%;
+                               opacity: 0;
+                               transition: .5s ease;
+                               background-color: black;
+                           }
+                           
+                           .container:hover .overlay {
+                               opacity: 1;
+                           }
+                           
+                           .text {
+                               color: white;
+                               font-size: 20px;
+                               position: absolute;
+                               top: 50%;
+                               left: 50%;
+                               -webkit-transform: translate(-50%, -50%);
+                               -ms-transform: translate(-50%, -50%);
+                               transform: translate(-50%, -50%);
+                               text-align: center;
+                           }
+                           
+                           img {
+                               display: flex;
+                               flex-wrap: wrap;
+                               justify-content: space-evenly;
+                               padding: 8px;
+                               margin: 8px;
+                               border: .25px red solid;
+                           }
+                           
+                           .project-tile {
+                               margin: 1em;
+                           }
+                           
+                           .project-tile a:hover {
+                               color: blue;
+                           }
+                           
+                           a {
+                               text-decoration: none;
+                           }
+                           
+                           #contact {
+                               background-color: var(--darkblue);
+                               color: white;
+                               display: flex;
+                               flex-direction: column;
+                               justify-content: center;
+                               align-items: center;
+                               width: 100%;
+                               height: 80vh;
+                               line-height: 3em;
+                           }
+                           
+                           @media (max-width: 100px) {
+                               html {
+                                   font-size: 100%;
+                               }
+                           }
+                           
+                           @media (max-width: 980px) {
+                               html {
+                                   font-size: 80%;
+                               }
+                           }
+                           
+                           @media (max-width: 460px) {
+                               html {
+                                   font-size: 60%;
+                               }
+                           }
+                           
+                           .contact-links {
+                               flex-wrap: wrap;
+                           }
+                           
+                           .contact-links a {
+                               margin: 1em;
+                               color: white;
+                           }
+                           
+                           footer {
+                               display: flex;
+                               justify-content: space-evenly;
+                               align-items: center;
+                               text-align: center;
+                               background-color: darkslategrey;
+                               height: 70px;
+                               color: #fff;
+                           }
