--- a/pokemon/style.css
+++ b/pokemon/style.css
@@ -7,7 +7,7 @@
 .pokeGrid {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    justify-content: space-between;
 }
 
 .scene {
@@ -15,4 +15,27 @@
     height: 260px;
     border: 1px solid darkgrey;
     margin: 10px;
+}
+
+.card {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    position: relative;
+}
+
+.card.is-flipped {
+    transform: rotateY(180deg);
+}
+
+.card__face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    line-height: 260px;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    font-size: 40px;
+    backface-visibility: hidden;
 }
