--- a/pokemon/style.css
+++ b/pokemon/style.css
@@ -20,6 +20,8 @@
 .card {
     width: 100%;
     height: 100%;
+    transition: 1s;
+    transform-style: preserve-3d;
     cursor: pointer;
     position: relative;
 }
@@ -32,10 +34,19 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    line-height: 260px;
-    color: white;
+    color: black;
     text-align: center;
     font-weight: bold;
-    font-size: 40px;
     backface-visibility: hidden;
+    border: 4px darkblue solid;
+    box-shadow: 3px 3px 3px black;
+}
+
+.card__face--front {
+    background: red;
+}
+
+.card__face--back {
+    background: blue;
+    transform: rotateY(180deg);
 }
