--- a/pokemon/style.css
+++ b/pokemon/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+h1 {
+    color: white;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+}
+
 .pokeGrid {
     display: flex;
     flex-wrap: wrap;
@@ -27,14 +33,14 @@
 }
 
 .card.is-flipped {
-    transform: rotateY(180deg);
+    transform: rotateX(180deg);
 }
 
 .card__face {
     position: absolute;
     width: 100%;
     height: 100%;
-    color: black;
+    color: white;
     text-align: center;
     font-weight: bold;
     backface-visibility: hidden;
@@ -43,10 +49,14 @@
 }
 
 .card__face--front {
-    background: red;
+    background: indigo;
 }
 
 .card__face--back {
-    background: blue;
-    transform: rotateY(180deg);
+    background: navy;
+    transform: rotateX(180deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-align: center;
 }
