--- a/pokemon/style.css
+++ b/pokemon/style.css
@@ -51,7 +51,7 @@ h1 {
 
 #loadPokemon {
     color: white;
-    background-color: darkturquoise;
+    background-color: lightseagreen;
     height: 3em;
     padding: 6px;
     text-align: center;
