--- a/characters/style.css
+++ b/characters/style.css
@@ -7,13 +7,24 @@
         background-color: black;
         color: whitesmoke;
         text-align: center;
+        background-repeat: no-repeat;
     }
     
     figure>img {
         height: 220px;
+        padding: 0;
+        margin: 0;
+        line-height: 0;
     }
     
     figcaption {
+        text-align: center;
+        background-image: linear-gradient(blue, purple);
+        width: 100%;
+        height: 2em;
+        padding: 0;
+        margin: 0;
+        white-space: 0%;
         text-align: center;
     }
     
@@ -21,4 +32,40 @@
         display: flex;
         flex-wrap: wrap;
         margin-top: .5em;
+    }
+    
+    #maleButton {
+        color: white;
+        background-color: blue;
+        height: 3em;
+        padding: 6px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        border-radius: 8px;
+    }
+    
+    #femaleButton {
+        color: white;
+        background-color: blueviolet;
+        height: 3em;
+        padding: 6px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        border-radius: 8px;
+    }
+    
+    #otherButton {
+        color: #fffdd0;
+        background-color: #ff005c;
+        height: 3em;
+        padding: 6px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        border-radius: 8px;
     }
