--- a/pokemon/style.css
+++ b/pokemon/style.css
@@ -5,9 +5,9 @@
 }
 
 h1 {
-    color: orangered;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: white;
+    color: darkred;
+    -webkit-text-stroke-width: .4px;
+    -webkit-text-stroke-color: whitesmoke;
     text-align: center;
 }
 
@@ -22,6 +22,15 @@ h1 {
     height: 260px;
     border: 1px solid darkgrey;
     margin: 10px;
+}
+
+.button {
+    height: 20px;
+    width: 100px;
+    margin: 10px 50px;
+    position: relative;
+    top: 80%;
+    left: 40%;
 }
 
 .card {
@@ -98,11 +107,25 @@ h1 {
 }
 
 .card__face--back {
-    background: navy;
+    background: darkblue;
     transform: rotateX(180deg);
     position: absolute;
     height: 250px;
     width: 195px;
+    text-align: center;
+}
+
+.card__face--back img {
+    position: relative;
+    opacity: .25;
+    position: absolute;
+    bottom: 20px;
+    right: 10px;
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+    height: 200px;
+    width: 168px;
     text-align: center;
 }
 
