--- a/pokemon/style.css
+++ b/pokemon/style.css
@@ -6,8 +6,8 @@
 
 h1 {
     color: darkred;
-    -webkit-text-stroke-width: .4px;
-    -webkit-text-stroke-color: whitesmoke;
+    -webkit-text-stroke-width: .75px;
+    -webkit-text-stroke-color: white;
     text-align: center;
     font-size: 48px;
 }
