--- a/starships/style.css
+++ b/starships/style.css
@@ -6,9 +6,9 @@
 body {
     background-color: black;
     color: white;
-    position: relative;
-    min-height: 100%;
-    min-height: 100vh;
+    position: static;
+    min-height: 1000px;
+    min-width: 100%;
 }
 
 main {
@@ -30,6 +30,8 @@ h1 {
     text-align: center;
     font-size: x-large;
     font-weight: 700;
+    font-size: 48px;
+    font-family: fantasy;
 }
 
 a {
@@ -39,6 +41,7 @@ a {
 
 li {
     list-style-type: none;
+    padding-left: 20px;
 }
 
 footer {
