small updates on pokemon cards

--- a/pokemon/style.css
+++ b/pokemon/style.css
@@ -46,7 +46,7 @@ h1 {
 
 .card.is-flipped {
     transform: rotateX(180deg);
-    border: 6px darkmagenta solid;
+    border: 6px darkblue;
 }
 
 .card__face {
@@ -116,14 +116,14 @@ h1 {
 }
 
 .card__face--back {
-    background: darkblue;
+    background: skyblue;
     transform: rotateX(180deg);
     position: absolute;
-    height: 250px;
+    height: 258px;
     width: 195px;
     text-align: center;
-    -webkit-text-stroke: .5px black;
-    -webkit-text-fill-color: white;
+    -webkit-text-stroke: .25px whitesmoke;
+    -webkit-text-fill-color: black;
 }
 
 .card__face--back img {
