--- a/pokemon/style.css
+++ b/pokemon/style.css
@@ -157,7 +157,7 @@ h1 {
 }
 
 .fighting {
-    background-image: linear-gradient(darkred, darkmagenta);
+    background-image: linear-gradient(darkred, darkorange);
 }
 
 .psychic {
@@ -173,7 +173,7 @@ h1 {
 }
 
 .bug {
-    background-image: linear-gradient(brown, darkgreen);
+    background-image: linear-gradient(green, brown);
 }
 
 .fairy {
@@ -189,9 +189,25 @@ h1 {
 }
 
 .dark {
-    background-image: linear-gradient(magenta, orchid);
+    background-image: linear-gradient(darkmagenta, orchid);
 }
 
 .ghost {
     background-image: linear-gradient(darkgrey, white);
+}
+
+.flying {
+    background-image: linear-gradient(darkorange, #FFFF66);
+}
+
+.ice {
+    background-image: linear-gradient(grey, #fcf2d8);
+}
+
+.dragon {
+    background-image: linear-gradient(darkviolet, cyan);
+}
+
+.steel {
+    background-image: linear-gradient(darkgreen, springgreen);
 }
