--- a/pokemon/style.css
+++ b/pokemon/style.css
@@ -5,7 +5,10 @@
 }
 
 body {
-    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 h1 {
@@ -20,7 +23,7 @@ h1 {
 .pokeGrid {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .scene {
